2016-10-22	"Unpossible!"

		include/innocent-pear/unpossible.h :
		- split from omg.h and given a new name

		include/innocent-pear/kthxbai.h :
		- moved bit_set(...) out to bbq.h
		- further improved opaque predicates -- among other things,
		  can now do non-trivial things in _both_ branches of an
		  `if ... else ...'
		- simplified one of the spurious `do ... while' loops
		- added braces to properly delineate the scopes of the various
		  kthxbai_impl<...> objects in recursion

		include/innocent-pear/omg.h :
		- split omg_impl_0 into unpossible.h
		- omg<...> constructor can now accept a second boolean
		  argument; `true' means we are free to emit junk
		- now calls rofl<...>::open(...) with proper argument cast

		include/innocent-pear/bbq.h :
		- moved bit_set(...) from kthxbai.h

		include/innocent-pear/rofl.h :
		- rofl_impl_syscall<...>::re_arg(.) now directly casts
		  pointers to uintptr_t without going through a union :-)

		GNUmakefile :
		- added include/innocent-pear/unpossible.h to dependencies
		- now dumps larger portions of compiled test binaries (again)

2016-10-21	Round and round and round.

		include/innocent-pear/kthxbai.h :
		- added a dummy `do ... while', and a not-so-dummy one, to
		  produce spurious loops in function control flow graphs;
		  these are given extra probability mass
		- also giving more probability to use of pointer aliasing
		- opaque predicates can now test bits of operands other than
		  the top bit, which should make them even more opaque
		- slightly improved mixing of pseudorandom states

2016-10-20	Round and round.

		include/innocent-pear/kthxbai.h :
		- kthxbai_impl<...> can now try to scramble constants by
		  rotating them a constant number of bits

		include/innocent-pear/bbq.h :
		- switched back from uint64_t to uint_least64_t
		- added code to clip uint_least64_t values to 64 bits -- in
		  case it can hold more
		- pick_hi<.>(.) now only looks at lowest 64 bits of its
		  argument